--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,16 @@ spring.application.name=boardserver
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/board
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=1234
 mybatis.mapper-locations=classpath:com.fastcampus.boardserver.mapper/*.xml
+
+# redis
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.repositories.enabled=false
+# redis? ???? 3600=1?
+expire.defaultTime=3600
